--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
       }, true);
 
       board.addEventListener('promote',function (e) {
-  		// Your code here
-    	},true);
+        removeCheckerAt(e.details.row, e.details.col);
+        drawCheckerAt(e.details.checker, e.details.row, e.details.col);
+      },true);
 
 
       $("#btnNewGame").click(function(evt) {
