--- a/index.html
+++ b/index.html
@@ -78,31 +78,17 @@
 
 	    rules = new Rules(board);
 
-      var can = document.getElementById('checkerboard');
-      var ctx = can.getContext('2d');
       var cellsize = 400 / board.boardSize;
 
-
-
       var repaintBoard = function (){
-        // set up a pattern
-        var pattern = document.createElement('canvas');
-        pattern.width = 2 * cellsize;
-        pattern.height = 2 * cellsize;
-        var pctx = pattern.getContext('2d');
-        pctx.fillStyle = "rgb(0, 0, 0)";
-        pctx.fillRect(0, cellsize, cellsize, cellsize);
-        pctx.fillRect(cellsize, 0, cellsize, cellsize);
+        var checkerboard = document.getElementById("checkerboard");
 
-        // draw pattern
-        var pattern = ctx.createPattern(pattern, "repeat");
-        ctx.beginPath();
-        ctx.moveTo(0, 0);
-        ctx.lineTo(0, 400);
-        ctx.lineTo(400, 400);
-        ctx.lineTo(400, 0);
-        ctx.fillStyle = pattern;
-        ctx.fill();
+        for (var i=0; i<board.boardSize; i++){
+            var row = checkerboard.appendChild(document.createElement("div"));
+            for (var j=0; j<board.boardSize; j++){
+                row.appendChild(document.createElement("span"));
+            }
+        }
       }
 
       repaintBoard();
@@ -118,15 +104,13 @@
       var drawCheckerAt = function (checker, row, col){
         var base_image = new Image();
         base_image.src = "graphics/" + checker.color + (checker.isKing ? "-king.png" : "-piece.png");
-        base_image.onload = function(){
-          ctx.drawImage(base_image, col*cellsize, row*cellsize, cellsize, cellsize);
-        }
+        var cell = $('#checkerboard tr:eq(' + row + ') td:eq(' + col + ')');
+
       }
 
       var removeCheckerAt = function (row, col){
-        var context = can.getContext("2d");
-        context.fillStyle = ((row + col) % 2 == 0) ? "#FFF" : "#000";
-        ctx.fillRect(col*cellsize, row*cellsize, cellsize, cellsize);
+      var cell = $('#checkerboard tr:eq(' + row + ') td:eq(' + col + ')');
+
       }
 
       board.addEventListener('add',function (e) {
