--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     			  <tr><td><div id="turnIndicator">black's turn</div></td></tr>
             <tr><td><input id="btnNewGame" type="button" name="new" value="New Game"/></td></tr>
             <tr><td><input id="btnAutoMove" type="button" name="new" value="Auto Move"/></td></tr>
+            <tr><td><input id="btnUndo" type="button" name="new" value="Undo" /></td></tr>
+            <tr><td><input id="btnRedo" type="button" name="new" value="Redo" /></td></tr>
           </table>
         </td>
         <td id="content">
