--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <tr>
         <td id="navigation">
           <table>
-    			  <tr><td><div id="turnIndicator">black's turn</div></td></tr>
+    			  <tr><td><div id="turnIndicator" class="blackturn">black's turn</div></td></tr>
             <tr><td><input id="btnNewGame" type="button" name="new" value="New Game"/></td></tr>
             <tr><td><input id="btnAutoMove" type="button" name="new" value="Auto Move"/></td></tr>
             <tr><td><input id="btnUndo" type="button" name="new" value="Undo" /></td></tr>
